--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
 <header>
 
-  <main> <!-- main é parte principal-->
+  <main class="apresentacao"> <!-- main é parte principal-->
 <h1> Eleve seu negócio digital à outro nível <strong>com um Front-end de qualidade!</strong></h1>
   </main>
 <p> Olá! Eu sou André, um </strong>desenvolvedor Front-end</strong> com especialidade em HTML e CSS. Ajudo pequenos negócios e designers a colocar em prática boas ideias. Vamos conversar?</p>
 
-  <a href="https://instagram.com/y.larissa_karen">Instagram</a>
-  <a href="https://github.com/larissa-karen"> GitHub</a>
+  <a href="https://www.instagram.com/de_dezinho_?igsh=Zm1ubmJiaTVkcDQ5">Instagram</a>
+  <a href="https://github.com/dedelind"> GitHub</a>
+  <img class="foto" src="dede.webp"
 <main></main>
   
   <footer> <!-- footer é o rodapé-->
