--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 <h1> Eleve seu negócio digital à outro nível <strong>com um Front-end de qualidade!</strong></h1>
   </main>
 <p> Olá! Eu sou André, um </strong>desenvolvedor Front-end</strong> com especialidade em HTML e CSS. Ajudo pequenos negócios e designers a colocar em prática boas ideias. Vamos conversar?</p>
-
+  
+   <div> class="apresentacao__links"
   <a href="https://www.instagram.com/de_dezinho_?igsh=Zm1ubmJiaTVkcDQ5">Instagram</a>
   <a href="https://github.com/dedelind"> GitHub</a>
+  
   <img class="foto" src="dede.webp"
 <main></main>
   
