--- a/index.html
+++ b/index.html
@@ -4,30 +4,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Portfolio-André</title>
+  <title>Portfolio - </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<header> <!--header é o cabeçalho-->
+  <header> <!-- Header é o cabeçalho -->
 
-<header>
+  </header>
 
-  <main class="apresentacao"> <!-- main é parte principal-->
-<h1> Eleve seu negócio digital à outro nível <strong>com um Front-end de qualidade!</strong></h1>
-  </main>
-<p> Olá! Eu sou André, um </strong>desenvolvedor Front-end</strong> com especialidade em HTML e CSS. Ajudo pequenos negócios e designers a colocar em prática boas ideias. Vamos conversar?</p>
-  
-   <div> class="apresentacao__links"
-  <a href="https://www.instagram.com/de_dezinho_?igsh=Zm1ubmJiaTVkcDQ5">Instagram</a>
-  <a href="https://github.com/dedelind"> GitHub</a>
-  
-  <img class="foto" src="dede.webp"
-<main></main>
-  
-  <footer> <!-- footer é o rodapé-->
+  <main class="apresentacao"> <!-- Main é a parte principal -->
+    <div class="apresentacao__conteudo">
+  <h1 class="apresentacao__conteudo__titulo"> Eleve seu negócio digital à outro nivel com um <strong class="titulo__destaque"> Front-End de qualidade!</strong> </h1>
+    <p class="apresentacao__conteudo__texto"> Olá! Eu sou <strong></strong>, um <strong> desenvolvedor Front-End</strong> com especialidade em <strong>HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+
+
+<div class="apresentacao__links">
+  <h2 class="apresentacao__links__subtitulo">Acesse as minhas redes:</h2>
+    <a class="apresentacao__links__link"  href="https://www.instagram.com/de_dezinho_?igsh=Zm1ubmJiaTVkcDQ5"> Instagram </a>
+    <a class="apresentacao__links__link"    href="https://github.com/dedelind"> GitHub</a>
+  </div>
+  </div>
+    <img src="dede.webp" class="foto"> </img>
+</main>
+
+  <footer> <!-- footer é o rodapé -->
+
+
+  </footer>
 
   <script src="script.js"></script>
 </body>
 
-  </html>
+</html>
