--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="apresentacao"> <!-- Main é a parte principal -->
     <div class="apresentacao__conteudo">
   <h1 class="apresentacao__conteudo__titulo"> Eleve seu negócio digital à outro nivel com um <strong class="titulo__destaque"> Front-End de qualidade!</strong> </h1>
-    <p class="apresentacao__conteudo__texto"> Olá! Eu sou <strong></strong>, um <strong> desenvolvedor Front-End</strong> com especialidade em <strong>HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+    <p class="apresentacao__conteudo__texto"> Olá! Eu sou André Oliveira <strong></strong>, um <strong> desenvolvedor Front-End</strong> com especialidade em <strong>HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
 
 
 <div class="apresentacao__links">
